[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmaster"
version = "1.0.0"
description = "Professional TUI Task Manager with Zen-Dark theme"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Milan Saric"}
]
keywords = ["task", "todo", "tui", "terminal", "curses", "manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Textual",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.scripts]
taskmaster = "taskmaster:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskmaster*"]
exclude = ["taskmaster_ai*"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
